# python-commit-and-tag-version

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/commit_and_tag_version/: __init__.py  checkpoint.py  cli.py  commit_parser.py  config.py  defaults.py  format_commit_message.py  git.py  models.py  run_lifecycle_script.py  write_file.py
src/commit_and_tag_version/lifecycles/: bump.py  changelog.py  commit.py  tag.py
src/commit_and_tag_version/updaters/: __init__.py  base.py  csproj.py  gradle.py  json_updater.py  maven.py  openapi.py  plain_text.py  python_updater.py  yaml_updater.py
tests/: conftest.py  test_bump.py  test_changelog.py  test_checkpoint.py  test_cli.py  test_commit.py  test_commit_parser.py  test_config.py  test_defaults.py  test_format_commit_message.py  test_git.py  test_main.py  test_models.py  test_pyproject_license.py  test_run_lifecycle_script.py  test_tag.py  test_write_file.py
tests/fixtures/: Project-6.3.1.csproj  build-6.3.1.gradle.kts  openapi-1.2.3.yaml  package-1.0.0.json  pom-6.3.1.xml  pubspec-6.3.1.yaml
tests/integration/: test_git_integration.py
tests/test_updaters/: test_csproj.py  test_gradle.py  test_json.py  test_maven.py  test_openapi.py  test_plain_text.py  test_python_updater.py  test_resolver.py  test_yaml.py
